WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304918
[JSC] Fix functionStart mismatch for async builtin functions
https://bugs.webkit.org/show_bug.cgi?id=304918
Summary
[JSC] Fix functionStart mismatch for async builtin functions
Sosuke Suzuki
Reported
2026-01-04 21:03:27 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-01-04 21:04:35 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56070
EWS
Comment 2
2026-01-10 09:15:35 PST
Committed
305410@main
(8e4626937bb9): <
https://commits.webkit.org/305410@main
> Reviewed commits have been landed. Closing PR #56070 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-01-10 09:16:12 PST
<
rdar://problem/167908831
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug