[JSC] Fix `functionStart` mismatch for async builtin functions https://bugs.webkit.org/show_bug.cgi?id=304918

Reviewed by Yusuke Suzuki.

The hand-rolled parser in BuiltinExecutables.cpp incorrectly calculated
functionKeywordStart for async functions. It was using:

    int functionKeywordStart = strlen("(") + asyncOffset;

For async functions, asyncOffset is 6 (strlen("async ")), so this
returned 7, pointing to the "function" keyword. However, the JSC parser
sets functionStart to 1, pointing to the "async" keyword.

This patch fixes the calculation to always use strlen("(") = 1, which
matches the JSC parser behavior.

Additionally, this patch:
- Adds m_functionStart comparison to FunctionMetadataNode::operator==
  so that mismatches are properly detected during validation.
- Extends $vm.createBuiltin to accept an optional visibility argument
  ("public", "private", "privateRecursive") for testing purposes.

* JSTests/stress/async-builtin-function-keyword-start-metadata.js: Added.
* Source/JavaScriptCore/builtins/BuiltinExecutables.cpp:
(JSC::BuiltinExecutables::createExecutable):
* Source/JavaScriptCore/parser/Nodes.cpp:
(JSC::FunctionMetadataNode::operator== const):
* Source/JavaScriptCore/tools/JSDollarVM.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):

Canonical link: https://commits.webkit.org/305410@main